--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                         <li><a href="#">nav ul li a</a></li>
                     </ul>
                 </nav>
+                <!--[if lte IE 8]>
+                    <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+                 <![endif]-->
             </header>
         </div>
 
